grader/src/main/java/reports/GraderUI_report.txt
Compilation Failed

Main.java:15: error: class GraderUI is public, should be declared in a file named GraderUI.java
public class GraderUI extends JFrame {
       ^
1 error
